--- a/package.json
+++ b/package.json
@@ -49,17 +49,17 @@
     "gulp-sass": "^5.1.0",
     "gulp-svgmin": "^4.1.0",
     "multipipe": "^4.0.0",
-    "node-sass": "^7.0.1",
     "pngquant-bin": "^6.0.1",
     "postcss-scss": "^4.0.4",
     "pre-push": "^0.1.2",
-    "sass": "^1.51.0",
+    "sass": "^1.79.4",
     "stylelint": "^14.15.0",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^29.0.0"
   },
   "dependencies": {
     "fslightbox": "^3.4.1",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "node-sass": "^9.0.0"
   }
 }
